# breezybot

./: Cargo.toml
locales/: en_US.yml
src/: main.rs
src/database/: mod.rs
src/database/entities/: candidates.rs  elections.rs  guilds.rs  members.rs  mod.rs  prelude.rs  test.rs  votes.rs
src/database/queries/: elections.rs  guilds.rs  members.rs  mod.rs  votes.rs
src/discord/: lib.rs  mod.rs  translation.rs
src/discord/activity/: lib.rs  mod.rs
src/discord/elections/: claims.rs  host.rs  lib.rs  mod.rs  roles.rs  votes.rs
src/webserver/: mod.rs
translations/: en-US.ftl
