[package]
name = "breezybot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
poise = "0.5.2"
tokio = "1.26.0"
poem = "2.0.0"
sea-orm = { version = "0.12.14", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls"] }
futures = "0.3.30"
serde = "1.0.197"
comfy-table = "7.1.0"
serde_json = "1.0.115"
chrono = "0.4.37"
rust-i18n = "3.0.1"
shuttle-runtime = "0.43.0"
shuttle-poise = "0.37.0"
shuttle-secrets = "0.42.0"
shuttle-poem = "0.43.0"
